# rover-ekf

./: .gitignore  README.md  pyproject.toml  sensor_config.json
src/ekf/: config.py  filter.py  main.py  measurements.py  state.py  tag_calculations.py  tracker.py
src/ekf/performance/: kalman.py
src/ekf/recording/: scenario.py  tracker.py
src/ekf/sensors/: __init__.py  aruco.py  camera.py  img_recording_sensor.py  motor_state.py  sensor.py  tag_positions.py  yocto_3d.py
src/ekf/simulation/: __init__.py  motor.py  rover.py  sensors.py  simulation.py
tests/: calibration.pkl  test_aruco.py  test_kalman.py  test_recording.py  test_tag_detection.py  test_tag_sensor.py  test_transition.py
tests/imgs/: tag_testjpg
